# cafe-power-manager

./: .build.yml  .travis.yml  AUTHORS  Makefile.am  NEWS  README  autogen.sh  cafe-power-manager.pot  configure.ac  index.html  makepot  output_42b354880bf781e9af8014de6663bb6845699709  output_ab8ac0cd7c880ad64f7f779d9bcbfe65fe68dd76  update-authors.pl
.tx/: config
2023-09-12-084345-94235-1@74419cccfe9f_master/: commitmsg  index.html  output_74419cccfe9f00b51faf921edad8828fcd68e451  report-0b576b.html  report-245139.html  report-26c008.html  report-29c36d.html  report-5d7c44.html  report-6506da.html  report-6559c5.html  report-77897a.html  report-8c2a77.html  report-a2f312.html  report-ada392.html  report-bbf11d.html  report-ecfc7a.html
2023-09-12-084559-4878-cppcheck@74419cccfe9f_master/: 11.html  23.html  27.html
2023-09-14-085005-94240-1@fc53ff02a794_devel/: index.html  report-0b576b.html  report-245139.html  report-26c008.html  report-29c36d.html  report-5d7c44.html  report-6506da.html  report-6559c5.html  report-77897a.html  report-8c2a77.html  report-a2f312.html  report-ada392.html  report-bbf11d.html  report-ecfc7a.html
2023-09-14-085157-2491-cppcheck@fc53ff02a794_devel/: 10.html  13.html  24.html  5.html  8.html  output_fc53ff02a794ec62197c56f2d40a3230262196bd
2023-09-14-085615-94235-1@1cba8a408d3b_devel/: index.html  output_1cba8a408d3ba3546602846dc27b06fff36af226  report-0b576b.html  report-245139.html  report-26c008.html  report-29c36d.html  report-5d7c44.html  report-6506da.html  report-6559c5.html  report-77897a.html  report-8c2a77.html  report-a2f312.html  report-ada392.html  report-bbf11d.html  report-ecfc7a.html
2023-09-14-085810-9305-cppcheck@1cba8a408d3b_devel/: 20.html  22.html
2023-09-14-090628-94236-1@4e7a40a9711e_devel/: index.html  report-0b576b.html  report-245139.html  report-26c008.html  report-29c36d.html  report-5d7c44.html  report-6506da.html  report-6559c5.html  report-77897a.html  report-8c2a77.html  report-a2f312.html  report-ada392.html  report-bbf11d.html  report-ecfc7a.html
2023-09-14-090820-1952-cppcheck@4e7a40a9711e_devel/: output_4e7a40a9711edf4be2af171c91f840a7111c24f1
2023-09-14-091246-94235-1@927904e4126a_devel/: index.html  report-0b576b.html  report-245139.html  report-26c008.html  report-29c36d.html  (+9 more)
applets/brightness/: Makefile.am  brightness-applet.c  cpm-common.c  cpm-common.h  gpm-common.c  org.cafe.BrightnessApplet.cafe-panel-applet.desktop.in.in  org.cafe.panel.applet.BrightnessAppletFactory.service.in
data/: Makefile.am  acme.ui  cafe-power-backlight-helper.1  cafe-power-manager.1  cafe-power-manager.about  cafe-power-manager.desktop.in.in  cafe-power-preferences.1  cafe-power-preferences.desktop.in.in  cafe-power-statistics.1  cafe-power-statistics.desktop.in.in  cpm-prefs.ui  gpm-prefs.ui  gpm-statistics.ui  org.cafe.PowerManager.service.in  org.cafe.power-manager.gschema.xml.in  org.cafe.power-manager.manager.gresource.xml  org.cafe.power-manager.preferences.gresource.xml  org.cafe.power-manager.statistics.gresource.xml
data/icons/: Makefile.am
help/: Makefile.am  cafe-power-manager.omf.in  cafe-power-manager.pot
help/C/: index.docbook  legal.xml
help/af/: af.po
help/am/: am.po
help/ar/: ar.po
help/as/: as.po
help/ast/: ast.po
help/az/: az.po
help/be/: be.po
help/bg/: bg.po
help/bn/: bn.po
help/bn_IN/: bn_IN.po
help/br/: br.po
help/bs/: bs.po
help/ca/: ca.po
help/ca@valencia/: ca@valencia.po
help/cmn/: cmn.po
help/crh/: crh.po
help/cs/: cs.po
help/cy/: cy.po
help/da/: da.po
help/de/: de.po
help/dz/: dz.po
help/el/: el.po
help/en_AU/: en_AU.po
help/en_CA/: en_CA.po
help/en_GB/: en_GB.po
help/eo/: eo.po
help/es/: es.po
help/es_AR/: es_AR.po
help/es_CL/: es_CL.po
help/es_CO/: es_CO.po
help/es_ES/: es_ES.po
help/es_MX/: es_MX.po
help/es_PR/: es_PR.po
help/et/: et.po
help/eu/: eu.po
help/fa/: fa.po
help/fi/: fi.po
help/fr/: fr.po
help/frp/: frp.po
help/fur/: fur.po
help/fy/: fy.po
help/ga/: ga.po
help/gl/: gl.po
help/gu/: gu.po
help/ha/: ha.po
help/he/: he.po
help/hi/: hi.po
help/hr/: hr.po
help/hu/: hu.po
help/hy/: hy.po
help/ia/: ia.po
help/id/: id.po
help/ie/: ie.po
help/ig/: ig.po
help/is/: is.po
help/it/: it.po
help/ja/: ja.po
help/jv/: jv.po
help/ka/: ka.po
help/kab/: kab.po
help/kk/: kk.po
help/kn/: kn.po
help/ko/: ko.po
help/ku/: ku.po
help/ku_IQ/: ku_IQ.po
help/ky/: ky.po
help/la/: la.po
help/lt/: lt.po
help/lv/: lv.po
help/mai/: mai.po
help/mg/: mg.po
help/mi/: mi.po
help/mk/: mk.po
help/ml/: ml.po
help/mn/: mn.po
help/mr/: mr.po
help/ms/: ms.po
help/nb/: nb.po
help/nds/: nds.po
help/ne/: ne.po
help/nl/: nl.po
help/nn/: nn.po
help/nso/: nso.po
help/oc/: oc.po
help/or/: or.po
help/pa/: pa.po
help/pl/: pl.po
help/ps/: ps.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/si/: si.po
help/sk/: sk.po
help/sl/: sl.po
help/sq/: sq.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
help/sv/: sv.po
help/ta/: ta.po
help/te/: te.po
help/th/: th.po
help/tk/: tk.po
help/tr/: tr.po
help/ug/: ug.po
help/uk/: uk.po
help/ur/: ur.po
help/uz/: uz.po
help/vi/: vi.po
help/wa/: wa.po
help/xh/: xh.po
help/yo/: yo.po
help/zh-Hans/: zh-Hans.po
help/zh_CN/: zh_CN.po
help/zh_HK/: zh_HK.po
help/zh_TW/: zh_TW.po
help/zu/: zu.po
src/: Makefile.am  cpm-backlight-helper.c  cpm-backlight.c  cpm-backlight.h  cpm-brightness.c  cpm-brightness.h  cpm-button.c  cpm-button.h  cpm-common.c  cpm-common.h  cpm-control.c  cpm-control.h  cpm-dpms.c  cpm-dpms.h  cpm-engine.c  cpm-engine.h  cpm-graph-widget.c  cpm-graph-widget.h  cpm-icon-names.h  cpm-idle.c  cpm-idle.h  cpm-kbd-backlight.c  cpm-kbd-backlight.h  cpm-load.c  cpm-load.h  cpm-main.c  cpm-manager.c  cpm-manager.h  cpm-networkmanager.c  cpm-networkmanager.h  cpm-phone.c  cpm-phone.h  cpm-point-obj.c  cpm-point-obj.h  cpm-prefs-core.c  cpm-prefs-core.h  cpm-prefs.c  cpm-screensaver.c  cpm-screensaver.h  cpm-self-test.c  (+44 more)
(+1282 files in other folders)
